# neo6502-firmware

./: .gitignore  .gitmodules  64tass.nix  LICENSE  Makefile  README.md  TODO  build_all.sh  memory.dump  nf.sublime-workspace  shell.nix  test.bsc  update.sh
basic/: Makefile  _include.inc  basic.asm  graphics.gfx  (+8 more)
firmware/: CMakeLists.txt  Makefile  build.sh  disk.sh  firmware.elf  firmware.uf2  grep  overcopy.sh  upload.sh
firmware/bootdisplay/: Makefile
firmware/common/: Makefile
firmware/common/bootdisplay/: Makefile
firmware/common/config/: defines.inc  dispatch.config  maths_binary.config  maths_other.config  maths_unary.config
firmware/common/config/display/: group2_console.inc  group5_graphics.inc  group6_sprites.inc  group9_turtle.inc
firmware/common/config/mathematics/: group4_binary.inc  group4_maths.inc  group4_other.inc  group4_unary.inc
firmware/common/config/miscellany/: group11_mouse.inc  group13_editor.inc  group7_controller.inc  group8_sound.inc
firmware/common/config/system/: group10_uext.inc  group12_blitter.inc  group1_system.inc  group3_fileio.inc
firmware/common/include/: common.h
firmware/common/include/data/: basic_binary.h  dispatch_code.h  kernel_binary.h  logo_logo_png.h  neolocale.h  neowho.h  prompt.h  sfxdata.h  triangle.h
firmware/common/include/interface/: blitter.h  console.h  cursor.h  dispatch.h  editor.h  filesystem.h  font_5x7.h  gamepad.h  graphics.h  kbdcodes.h  keyboard.h  locale.h  maths.h  memory.h  miscellany.h  mos.h  mouse.h  ports.h  serial.h  sound.h  sprites.h  sweet16.h  timer.h  turtle.h  whitenoise.h
firmware/common/locale/: ch.locale  de.locale  fi.locale  fr.locale  gb.locale  it.locale  keymaps.py  sw.locale  us.locale
firmware/common/scripts/: cursors.py  danfont.py  keymaps.py  makedispatch.py  prompt.py  sfx.py  sweet16.gen  sweet16.py  who.py  yaff.py
firmware/common/scripts/cursors/: Makefile  graphics.gfx
firmware/common/sources/interface/: blitter.cpp  config.cpp  console.cpp  cursor.cpp  dispatch.cpp  editor.cpp  efla.cpp  fileinterface.cpp  filewrapper.cpp  gamepad.cpp  gfxcommands.cpp  graphics.cpp  keyboard.cpp  locale.cpp  logo.cpp  maths.cpp  memory.cpp  mos.cpp  mouse.cpp  pininterface.cpp  serialmanager.cpp  sfxmanager.cpp  sndcreator.cpp  sndmanager.cpp  sprites.cpp  sprites_xor.cpp  sweet16.cpp  tilemap.cpp  turtle.cpp
firmware/compile/: Makefile  cmake_install.cmake
firmware/compile/libraries/PicoDVI/software/libdvi/: Makefile
firmware/compile/pico-sdk/: cmake_install.cmake
firmware/compile/pico-sdk/src/: Makefile
firmware/compile/pico-sdk/src/common/boot_picoboot/: Makefile
firmware/compile/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
firmware/compile/pico-sdk/src/common/pico_time/: cmake_install.cmake
firmware/compile/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
firmware/compile/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
firmware/compile/pico-sdk/src/rp2_common/boot_stage2/: Makefile
firmware/compile/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
firmware/config/: dispatch.config  maths.config  maths_binary.config  maths_other.config  maths_unary.config
firmware/include/: common.h  memory.h  roms.h  wdc65C02cpu.h
firmware/include/data/: _sfxdata.h  basic_binary.h  binary.h  dispatch_code.h  figforth_binary.h  font_5x7.h  kernel_binary.h  prompt.h  sfxdata.h
firmware/include/interface/: console.h  dispatch.h  filesystem.h  graphics.h  kbdcodes.h  keyboard.h  maths.h  memory.h  miscellany.h  sound.h  sprites.h  tilemap.h  timer.h
firmware/include/system/: dvi_video.h  fileio.h  memory.h  processor.h  tick.h  usbdriver.h
firmware/kernel/: hconvert.py  kernel.asm  kernel.lst  test.asm  test.lst
firmware/libraries/: update_libs.sh
firmware/libraries/fatfs/source/: CMakeLists.txt  ffconf.h
firmware/new/patches/: picodvi_adafruit_add_neo6502_gpio.patch
firmware/scripts/: hconvert.py  hd44780.py  keymaps.py  makedispatch.py  nxmit.py  prompt.py  sfx.py  triangle.py  who.py
firmware/sources/: CMakeLists.txt  binary.h  main.c  main.cpp  mos65C02.c  mos65C02.h  roms.c
firmware/sources/hardware/: GamepadController.cpp  GamepadController.h  dvi_320x240x256.c  dvi_320x240x256.cpp  dvi_video.c  fdebug.c  fdebug.cpp  fileimplementation.c  fileimplementation.cpp  fileio.c  filesystem.c  ports.cpp  serial.cpp  sound.c  sound.cpp  sound_beeper.cpp.disabled  tick.cpp  timer.c  timer.cpp  usb_storage.c  usb_storage_example.c  usb_storage_vs.c  usbdriver.c  usbdriver.cpp  usbkeyboard.c
firmware/sources/hardware/gamepads/: Gamepad.h  Gamepad0079181C.cpp  Gamepad0079181C.h  Gamepad007918D2.cpp  Gamepad007918D2.h  Gamepad04284001.cpp  Gamepad04284001.h  Gamepad054C09CC.cpp  Gamepad054C09CC.h  Gamepad054C0CDA.cpp  Gamepad054C0CDA.h  Gamepad05832060.cpp  Gamepad05832060.h  Gamepad07382217.cpp  Gamepad07382217.h  Gamepad07382217C.cpp  Gamepad07382217C.h  Gamepad081FE401.cpp  Gamepad081FE401.h  Gamepad1c59002X.cpp  Gamepad1c59002X.h
firmware/sources/hardware/storage/: null_storage.c  null_storage.cpp  sdcard_storage.c  sdcard_storage.cpp  usb_storage.c  usb_storage.cpp
firmware/sources/hardware/tinysid/: Makefile  cpu.c  cpu.h  cpu_macros.h  cpu_opcodes.h  debug.h  fixedpointmath.h  fixedpointmathcode.h  fixedpointmathlut.h  main.c  main.h  main_sdl.c  mem.c  mem.h  prefs.c  prefs.h  prefs_items.c  psid.h  sid.cpp  sid.h  sys.h  types.h
firmware/sources/interface/: _locale.c  config.c  config.cpp  console.c  console.cpp  dispatch.c  efla.c  ellipse.cpp  fileinterface.c  fileio.c  gfxcommands.c  gfxcommands.cpp  graphics.c  graphics.cpp  keyboard.c  keyboard.cpp  logo.c  maths.c  maths.cpp  memory.c  memory.cpp  sfxmanager.c  sfxmanager.cpp  sndmanager.c  sndmanager.cpp  sprites.c  sprites.cpp  sprites_xor.c  sprites_xor.cpp  tick.cpp  tilemap.cpp
firmware/sources/system/: memory.c  mos65C02.c  processor.c  processor_bitbang.c  processor_bitbang.cpp  processor_pio.c  processor_pio.cpp  roms.cpp  sm0_memory_emulation_with_clock.pio
testing/8bitdvi/app/src/: CMakeLists.txt  main.c  usb2serial.c
(+1048 files in other folders)
